BUG: v4skin | styles -> fixed the rendering of empty mainnavigation entries, now readable in text-color and italic instead of white

--- a/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
+++ b/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
@@ -255,7 +255,7 @@ footer {
 
                 li {
                     padding: 2px 15px 2px 12px;
-                    color: @link-color;
+                    color: @text-color;
                     font-style: italic;
 
                     a {
